removed redundant daemon arg